infra/k8s/messenger-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messenger-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messenger
  template:
    metadata:
      labels:
        app: messenger
    spec:
      containers:
        - name: messenger
          image: japahubs/messenger
---
apiVersion: v1
kind: Service
metadata:
  name: messenger-srv
spec:
  selector:
    app: messenger
  ports:
    - name: messenger
      protocol: TCP
      port: 3000
      targetPort: 3000
