infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: japaserver.com
      http:
        paths:
          - path: /api/messenger/?(.*)
            pathType: Prefix
            backend:
              service:
                name: messenger-srv
                port:
                  number: 3000
          - path: /users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: app-srv
                port:
                  number: 3000
